// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Textarea Mobile 1`] = `
<Textarea
  label="Can you provide more detail?"
  onChange={[Function]}
>
  <div
    className="text-label"
  >
    <label>
      Can you provide more detail?
    </label>
  </div>
  <textarea
    className="text-input"
    cols="60"
    onChange={[Function]}
    rows="8"
  />
</Textarea>
`;

exports[`Storyshots Textarea With Label 1`] = `
<Textarea
  label="Can you provide more detail?"
  onChange={[Function]}
>
  <div
    className="text-label"
  >
    <label>
      Can you provide more detail?
    </label>
  </div>
  <textarea
    className="text-input"
    cols="60"
    onChange={[Function]}
    rows="8"
  />
</Textarea>
`;

exports[`Storyshots Textarea Without Label 1`] = `
<Textarea
  label=""
  onChange={[Function]}
>
  <textarea
    className="text-input"
    cols="60"
    onChange={[Function]}
    rows="8"
  />
</Textarea>
`;
